src/components/datagrid/_data_grid_data_row.scss
.euiDataGridRow {
  background-color: $euiColorEmptyShade;
}

@include euiDataGridRowCell {
  @include euiFontSizeS;

  padding: $euiDataGridCellPaddingM;
  border-right: $euiDataGridVerticalBorder;
  border-bottom: $euiBorderThin;
  overflow: hidden;

  // Hack to allow focus trap to still stretch to full row height on defined heights
  > * {
    height: 100%;
  }

  &.euiDataGridRowCell--firstColumn {
    border-left: $euiBorderThin;
  }

  &.euiDataGridRowCell--lastColumn {
    border-right-color: $euiBorderColor;
  }

  &:focus {
    position: relative;
    @include euiDataGridCellFocus;
  }

  // Only add the transition effect on hover, so that it is instantaneous on focus
  // Long delays on hover to mitigate the accordion effect
  &:hover {
    .euiDataGridRowCell__actionButtonIcon {
      animation-duration: $euiAnimSpeedExtraFast;
      animation-name: euiDataGridCellActionsSlideIn;
      animation-iteration-count: 1;
      animation-delay: $euiAnimSpeedNormal;
      animation-fill-mode: forwards;
    }
    /*
     * For some incredibly bizarre reason, Safari doesn't correctly update the flex
     * width of the content (when rows are an undefined height/single flex row),
     * which causes the action icons to overlap & makes the content less readable.
     * This workaround "animation" forces a rerender of the flex content width
     *
     * TODO: Remove this workaround once https://bugs.webkit.org/show_bug.cgi?id=258539 is resolved
     */
    .euiDataGridRowCell__defaultHeight .euiDataGridRowCell__content {
      animation-name: euiDataGridCellActionsSafariWorkaround;
      animation-duration: 1000ms; // I don't know why the duration matters or why it being longer works more consistently 🥲
      animation-delay: $euiAnimSpeedNormal + $euiAnimSpeedExtraFast; // Wait for above animation to finish
      animation-iteration-count: 1;
      animation-fill-mode: forwards;
      animation-timing-function: linear;
    }
  }

  // On focus, directly show action buttons (without animation)
  &:focus,
  // Prevent the animation from flickering after cell popover close when focus is restored the expansion button
  &:focus-within,
  // Always make the cell actions visible when the cell popover is open
  &.euiDataGridRowCell--open {
    .euiDataGridRowCell__actionButtonIcon {
      animation: none;
      margin-left: $euiDataGridCellPaddingM;
      width: $euiSizeM;
    }
  }

  // if a cell is not hovered nor focused nor open via popover, don't show buttons in general
  &:not(:hover):not(:focus):not(.euiDataGridRowCell--open) {
    .euiDataGridRowCell__actionButtonIcon {
      display: none;
    }
  }

  &.euiDataGridRowCell--numeric {
    text-align: right;
  }

  &.euiDataGridRowCell--currency {
    text-align: right;
  }

  &.euiDataGridRowCell--uppercase {
    text-transform: uppercase;
  }

  &.euiDataGridRowCell--lowercase {
    text-transform: lowercase;
  }

  &.euiDataGridRowCell--capitalize {
    text-transform: capitalize;
  }
}

.euiDataGridRowCell__popover {
  @include euiScrollBar;
  overflow: auto;
  // stylelint-disable declaration-no-important
  max-width: 400px !important;
  max-height: 400px !important;
  z-index: $euiZDataGridCellPopover !important;
  // stylelint-enable declaration-no-important
  // Workaround for a Safari CSS bug when using both `overflow: auto` & `filter: drop-shadow`
  // (see https://github.com/elastic/eui/issues/6151)
  // Disables the default EuiPopover filter drop-shadow and uses box-shadow instead,
  // since we don't use the popover arrow in any case for cell popovers
  filter: none;
  @include euiBottomShadow; // TODO: Convert to euiShadowMedium() in Emotion
}

.euiDataGridRowCell__contentWrapper {
  position: relative; // Needed for .euiDataGridRowCell__actions--overlay
  height: 100%;
  overflow: hidden;
}

.euiDataGridRowCell__defaultHeight {
  display: flex;
  align-items: baseline;
  max-width: 100%;

  .euiDataGridRowCell__content {
    flex-grow: 1;
  }

  .euiDataGridRowCell__actions {
    flex-grow: 0;
  }

  .euiDataGridRowCell--controlColumn & {
    height: 100%;
    align-items: center;
  }
}

// Cell actions
.euiDataGridRowCell__actions {
  display: flex;

  &--overlay {
    position: absolute;
    right: 0;
    top: 0;
    padding: $euiDataGridCellPaddingM 0;
    background-color: $euiColorEmptyShade;
  }
}

.euiDataGridRowCell__actionButtonIcon {
  height: $euiSizeM;
  border-radius: $euiBorderRadius / 2;
  width: 0;
  overflow: hidden;
  // Have to take out the generic transition so it is instaneous on focus
  transition: none;
  // Disable filled button box-shadows on legacy theme - they're unnecessary when this small in a datagrid
  box-shadow: none !important; // stylelint-disable-line declaration-no-important
  // Remove filled button borders on legacy theme - this way we don't need to animate the border
  border: none;
}

// Row stripes
@include euiDataGridStyles(stripes) {
  .euiDataGridRow--striped {
    &,
    .euiDataGridRowCell__actions--overlay {
      background-color: $euiColorLightestShade;
    }
  }
}

// Row highlights
@include euiDataGridStyles(rowHoverHighlight) {
  .euiDataGridRow:hover {
    &,
    .euiDataGridRowCell__actions--overlay {
      background-color: $euiColorHighlight;
    }
  }
}

// Border alternates
@include euiDataGridStyles(bordersNone) {
  @include euiDataGridRowCell {
    border-color: transparent !important; // stylelint-disable-line declaration-no-important
  }
}

@include euiDataGridStyles(bordersHorizontal) {
  @include euiDataGridRowCell {
    border-right-color: transparent;
    border-left-color: transparent;
  }
}

// Font alternates
@include euiDataGridStyles(fontSizeSmall) {
  @include euiDataGridRowCell {
    @include euiFontSizeXS;
  }
}

@include euiDataGridStyles(fontSizeLarge) {
  @include euiDataGridRowCell {
    @include euiFontSize;
  }
}

// Padding alternates
@include euiDataGridStyles(paddingSmall) {
  @include euiDataGridRowCell {
    padding: $euiDataGridCellPaddingS;
  }
}

@include euiDataGridStyles(paddingLarge) {
  @include euiDataGridRowCell {
    padding: $euiDataGridCellPaddingL;
  }
}

// Compressed density grids - height tweaks
@include euiDataGridStyles(fontSizeSmall, paddingSmall) {
  .euiDataGridRowCell__actions--overlay {
    padding: ($euiDataGridCellPaddingS / 2) 0;
  }

  .euiDataGridRowCell__defaultHeight .euiDataGridRowCell__actions {
    transform: translateY(1px);
  }
}

@keyframes euiDataGridCellActionsSlideIn {
  from {
    margin-left: 0;
    width: 0;
  }

  to {
    margin-left: $euiDataGridCellPaddingM;
    width: $euiSizeM;
  }
}
@keyframes euiDataGridCellActionsSafariWorkaround {
  from {
    width: 100%;
    flex-basis: 100%;
  }

  to {
    width: auto;
    flex-basis: auto;
  }
}

